<resources>
    <string name="app_name">Action on Air</string>
    <string name="facebook_app_id">106449389908395</string>
    <string name="fb_login_protocol_scheme">fb106449389908395</string>

    <string name="camera_list">Cameras</string>
    <string name="sns_list">Social Networks</string>
    <string name="sns_fb_auth">Facebook</string>
    <string name="sns_google_auth">Google</string>

    <string name="icon_facebook">&#xf09a;</string>
    <string name="icon_google">&#xf1a0;</string>
    <string name="icon_twitch">&#xf1e8;</string>
    <string name="icon_link">&#xf0c1;</string>
    <string name="icon_unlink">&#xf127;</string>
    <string name="icon_connected">&#xf111;</string>
    <string name="icon_connecting">&#xf192;</string>
    <string name="icon_disconnected">&#xf10c;</string>
    <string name="icon_start">&#xf04b;</string>
    <string name="icon_stop">&#xf04c;</string>
    <string name="icon_camera">&#xf03d;</string>
    <string name="icon_microphone">&#xf130;</string>
    <string name="icon_remove">&#xf00d;</string>
</resources>
