<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333"
    android:padding="10dp"
    tools:context="scarwu.actiononair.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <LinearLayout
        android:id="@+id/snsBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="#666"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/snsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/sns_list"
            android:textAlignment="textStart"
            android:textColor="#fff" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/snsFBAuth"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/snsFBLive"
                android:layout_weight="1"
                android:text="@string/sns_fb_auth"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/snsFBLive"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:text="@string/icon_camera" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/snsGoogleAuth"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/snsGoogleLive"
                android:layout_toStartOf="@+id/snsGoogleLive"
                android:layout_weight="1"
                android:text="@string/sns_google_auth"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/snsGoogleLive"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:text="@string/icon_camera" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cameraBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/snsBlock"
        android:layout_weight="1"
        android:background="#666"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/snsBlock"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/cameraTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/camera_list"
            android:textColor="#fff" />

        <Button
            android:id="@+id/cameraNFCReader"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/camera_nfc_reader"
            android:textAllCaps="false" />

        <ListView
            android:id="@+id/cameraList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
