<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333"
    android:padding="10dp"
    tools:context="scarwu.actiononair.ControlPanelActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <SurfaceView
            android:id="@+id/liveView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/micSwitch"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/startAndStop"
                android:layout_toRightOf="@+id/startAndStop"
                android:layout_weight="1"
                android:text="@string/icon_microphone"
                android:textAlignment="center"
                android:textColor="@color/cardview_light_background" />

            <Switch
                android:id="@+id/camSwitch"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/micSwitch"
                android:layout_toEndOf="@+id/startAndStop"
                android:layout_toRightOf="@+id/startAndStop"
                android:text="@string/icon_camera"
                android:textAlignment="center"
                android:textColor="@color/cardview_light_background" />

            <Button
                android:id="@+id/startAndStop"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/icon_start" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
